# varba7

./: README.md  index.js  index.ts  package-lock.json  package.json
.github/workflows/: server-ci.yml  web-ci.yml
cron/: pyproject.toml  script.py
db/: setup.ts
db/models/: index.ts
domain/: test-db.ts
infra/: varba7.service
infra/cron/notion/: package-lock.json  package.json
infra/cron/notion/src/: index.js  models.js  mongo.js  notion.js
routes/: index.ts
server/: .eslintrc  index.ts  package-lock.json  package.json  varba7.service
server-old/: index.ts  package.json
server-old/src/: setup-fastify.ts
server-old/src/domain/: index.ts
server/src/db/: setup-mongo.ts
server/src/db/models/: index.ts  stats.ts
server/src/domain/: stats.ts
server/src/routes/: index.ts  latest.ts  ping.ts  stats.ts
web/: index.html  index.ts  package-lock.json  package.json  vite.config.js
web-old/: index.html  vite.config.js
web-old/src/: main.css  main.jsx
web-old/src/components/: weather-badge.jsx
web/src/: App.jsx  main.css  main.jsx  stats.jsx  use-data.js  use-latest.js  use-stats.js  weather-badge.jsx
web/src/components/: monthly-chart.jsx  months-select.jsx  stats.css  stats.jsx  weather-badge.css  weather-badge.jsx
web/src/db/models/: test-db.ts
web/src/domain/: index.ts
web/src/hooks/: use-stats.js
web/src/routes/: ping.ts  stats.ts  test-db.ts
web/src/selectors/: colors.js  months.js
