[tool.poetry]
name = "cron"
version = "0.1.0"
description = ""
authors = ["Martin Stoev <martin.y.stoev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
requests = "^2.31.0"
pymongo = "^4.3.3"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
